samples/_failures_safe/1761177796_6c1651_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fdfca05.c: In function ‘main’:
./samples/SAFE/__tmp_1fdfca05.c:133:61: error: missing terminating " character
  133 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "
      |                                                             ^
./samples/SAFE/__tmp_1fdfca05.c:133:5: error: expected expression at end of input
  133 |     add_log_entry(&analyzer, "2024-01-15 10:30:00", "INFO", "
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_1fdfca05.c:133:5: error: expected declaration or statement at end of input
